--- a/sealyr-cloud-netflix/sealyr-cloud-netflix-hystrix/src/main/resources/application.yml
+++ b/sealyr-cloud-netflix/sealyr-cloud-netflix-hystrix/src/main/resources/application.yml
@@ -2,12 +2,10 @@ spring:
   application:
     name: sealyr-cloud-netflix-hystrix
 server:
-  port: 8082
-eureka:
-  instance:
-    preferIpAddress: true
-    metadataMap:
-      instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+  port: 28082
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+        - hystrix.stream
