--- a/sealyr-cloud-netflix/sealyr-cloud-netflix-turbine/pom.xml
+++ b/sealyr-cloud-netflix/sealyr-cloud-netflix-turbine/pom.xml
@@ -32,6 +32,10 @@
 			<artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<exclusions>
