--- a/sealyr-cloud-netflix/sealyr-cloud-netflix-zuul/src/main/resources/application.yml
+++ b/sealyr-cloud-netflix/sealyr-cloud-netflix-zuul/src/main/resources/application.yml
@@ -2,20 +2,12 @@ spring:
   application:
     name: sealyr-cloud-netflix-zuul
 server:
-  port: 8085
-eureka:
-  instance:
-    preferIpAddress: true
-    metadataMap:
-      instanceId: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${server.port}}}
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+  port: 28085
 zuul:
   routes:
-    api-a:
+    api-eureka:
       path: /api/eureka/**
       serviceId: sealyr-cloud-netflix-eureka-client
-    api-b:
-      path: /api/feign/**
-      serviceId: sealyr-cloud-openfeign
+    api-hystrix:
+      path: /api/hystrix/**
+      serviceId: sealyr-cloud-netflix-hystrix
